# xlsxtemplater

./: .codacy.yml  .coveragerc  .gitattributes  .travis.yml  README.md  appveyor.yml  environment-dev.yml  install_dev.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
conda.recipe/: conda_build_config.yaml  meta.yaml
src/xlsxtemplater/: templater.py  templaterdefs.py  utils.py
test_data/: bsDataDictionary_Psets-out.xlsx  bsDataDictionary_Psets.xlsx
tests/: __init__.py  test_xlsxtemplater.py
xlsxtemplater/: __init__.py  templater.py  templaterdefs.py  utils.py  xlsxtemplater.py
