[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "xlsxtemplater"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [{ name = "jgunstone", email = "gunstone.john@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "python",
    "pandas",
    "openpyxl",
    "xlsxwriter",
    "dataclasses",
    "dacite",
    "typing",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/maxfordham/xlsxtemplater#readme"
Issues = "https://github.com/maxfordham/xlsxtemplater/issues"
Source = "https://github.com/maxfordham/xlsxtemplater"

[tool.hatch.version]
source = "vcs"
version-file = "_version.py"

[tool.hatch.build.targets.sdist]
include = ["/src/xlsxtemplater"]

[tool.hatch.envs.default]
dependencies = ["pytest", "pytest-cov"]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/xlsxtemplater --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = ["src/xlsxtemplater/__about__.py"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
#
[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
